--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Time left in </title>
-	<script src="w.js"></script>
+	<script src="countdown.js"></script>
 	<style type="text/css">
 		body {
 			text-align: center;
