modified h1 in index and date in script

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</style>
 </head>
 <body>
-	<h1>How much time left in Devesh's Birthday  ?</h1>
+	<h1>How much time left for my visit to Madras ?</h1>
 	<span id="countdown-holder"></span>
 	<script type="text/javascript">
 		var clock = document.getElementById("countdown-holder"), 
-			targetDate = new Date(2016,05, 29); // Dec 14, 2015; (dec==11)
+			targetDate = new Date(2015,11, 14); // Dec 14, 2015; (dec==11)
 		 
 		clock.innerHTML = countdown(targetDate).toString();
 		  	setInterval(function(){
